--- a/portfolio.html
+++ b/portfolio.html
@@ -22,180 +22,207 @@
   </head>
   <body>
     <header class="header">
-      <nav class="site-nav">
-        <a class="link logo" href="./index.html"
-          >Web<span class="logo-studio">Studio</span>
-        </a>
-        <ul class="list">
-          <li class="item">
-            <a class="link page" href="./index.html">Studio</a>
-          </li>
-          <li class="item">
-            <a class="link page" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="item">
-            <a class="link page" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="list">
-          <li class="item">
-            <a class="link" href="mailto:info@devstudio.com"
-              >info@devstudio.com
-            </a>
-          </li>
-          <li class="item">
-            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11 </a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <nav class="site-nav">
+          <a class="link logo" href="./index.html"
+            >Web<span class="logo-studio">Studio</span>
+          </a>
+          <ul class="list">
+            <li class="item">
+              <a class="link page" href="./index.html">Studio</a>
+            </li>
+            <li class="item">
+              <a class="link page" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="item">
+              <a class="link page" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="list">
+            <li class="item">
+              <a class="link" href="mailto:info@devstudio.com"
+                >info@devstudio.com
+              </a>
+            </li>
+            <li class="item">
+              <a class="link" href="tel:+110001111111">+11 (000) 111-11-11 </a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!-- Filter -->
 
       <section class="section gallery">
-        <h1 class="title" hidden>Gallery</h1>
-        <ul class="list filter">
-          <li class="item">
-            <button class="btn" type="button">All</button>
-          </li>
-          <li class="item">
-            <button class="btn" type="button">Web Site</button>
-          </li>
-          <li class="item">
-            <button class="btn" type="button">App</button>
-          </li>
-          <li class="item">
-            <button class="btn" type="button">Design</button>
-          </li>
-          <li class="item">
-            <button class="btn" type="button">Marketing</button>
-          </li>
-        </ul>
+        <div class="container">
+          <h1 class="title" hidden>Gallery</h1>
+          <ul class="list filter">
+            <li class="item item-btn">
+              <button class="btn" type="button">All</button>
+            </li>
+            <li class="item item-btn">
+              <button class="btn" type="button">Web Site</button>
+            </li>
+            <li class="item item-btn">
+              <button class="btn" type="button">App</button>
+            </li>
+            <li class="item item-btn">
+              <button class="btn" type="button">Design</button>
+            </li>
+            <li class="item item-btn">
+              <button class="btn" type="button">Marketing</button>
+            </li>
+          </ul>
+        </div>
 
         <!-- Gallery -->
-
-        <ul class="list">
-          <li class="item">
-            <a class="link" href="">
-              <img
-                class="image"
-                src="./images/portfolio-gallery/img-1-banking-app.jpg"
-                alt="Banking app interface"
-                width="360"
-              />
-              <h2 class="subtitle">Banking App Interface Concept</h2>
-              <p class="text">App</p>
-            </a>
-          </li>
-          <li class="item">
-            <a class="link" href="">
-              <img
-                class="image"
-                src="./images/portfolio-gallery/img-2-cashless-payment.jpg"
-                alt="Payment by phone"
-                width="360"
-              />
-              <h2 class="subtitle">Cashless Payment</h2>
-              <p class="text">Marketing</p>
-            </a>
-          </li>
-          <li class="item">
-            <a class="link" href="">
-              <img
-                class="image"
-                src="./images/portfolio-gallery/img-3-meditation-app.jpg"
-                alt="Laptop and phone"
-                width="360"
-              />
-              <h2 class="subtitle">Meditation App</h2>
-              <p class="text">App</p>
-            </a>
-          </li>
-          <li class="item">
-            <a class="link" href="">
-              <img
-                class="image"
-                src="./images/portfolio-gallery/img-4-taxi-service.jpg"
-                alt="Car"
-                width="360"
-              />
-              <h2 class="subtitle">Taxi Service</h2>
-              <p class="text">Marketing</p>
-            </a>
-          </li>
-          <li class="item">
-            <a class="link" href="">
-              <img
-                class="image"
-                src="./images/portfolio-gallery/img-5-screen-illustrations.jpg"
-                alt="Screen of phone"
-                width="360"
-              />
-              <h2 class="subtitle">Screen Illustrations</h2>
-              <p class="text">Design</p>
-            </a>
-          </li>
-          <li class="item">
-            <a class="link" href="">
-              <img
-                class="image"
-                src="./images/portfolio-gallery/img-6-online-courses.jpg"
-                alt="Young girl"
-                width="360"
-              />
-              <h2 class="subtitle">Online Courses</h2>
-              <p class="text">Marketing</p>
-            </a>
-          </li>
-          <li class="item">
-            <a class="link" href="">
-              <img
-                class="image"
-                src="./images/portfolio-gallery/img-7-instagram-stories.jpg"
-                alt="Advertisement of smart technology"
-                width="360"
-              />
-              <h2 class="subtitle">Instagram Stories Concept</h2>
-              <p class="text">Design</p>
-            </a>
-          </li>
-          <li class="item">
-            <a class="link" href="">
-              <img
-                class="image"
-                src="./images/portfolio-gallery/img-8-organic-food.jpg"
-                alt="Bag of vegetables"
-                width="360"
-              />
-              <h2 class="subtitle">Organic Food</h2>
-              <p class="text">Web Site</p>
-            </a>
-          </li>
-          <li class="item">
-            <a class="link" href="">
-              <img
-                class="image"
-                src="./images/portfolio-gallery/img-9-fresh-coffee.jpg"
-                alt="Fresh coffee"
-                width="360"
-              />
-              <h2 class="subtitle">Fresh Coffee</h2>
-              <p class="text">Web Site</p>
-            </a>
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="list cards">
+            <li class="item card">
+              <a class="link" href="">
+                <img
+                  class="image"
+                  src="./images/portfolio-gallery/img-1-banking-app.jpg"
+                  alt="Banking app interface"
+                  width="360"
+                />
+                <div class="desc">
+                  <h2 class="subtitle">Banking App Interface Concept</h2>
+                  <p class="text">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="item card">
+              <a class="link" href="">
+                <img
+                  class="image"
+                  src="./images/portfolio-gallery/img-2-cashless-payment.jpg"
+                  alt="Payment by phone"
+                  width="360"
+                />
+                <div class="desc">
+                  <h2 class="subtitle">Cashless Payment</h2>
+                  <p class="text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="item card">
+              <a class="link" href="">
+                <img
+                  class="image"
+                  src="./images/portfolio-gallery/img-3-meditation-app.jpg"
+                  alt="Laptop and phone"
+                  width="360"
+                />
+                <div class="desc">
+                  <h2 class="subtitle">Meditation App</h2>
+                  <p class="text">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="item card">
+              <a class="link" href="">
+                <img
+                  class="image"
+                  src="./images/portfolio-gallery/img-4-taxi-service.jpg"
+                  alt="Car"
+                  width="360"
+                />
+                <div class="desc">
+                  <h2 class="subtitle">Taxi Service</h2>
+                  <p class="text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="item card">
+              <a class="link" href="">
+                <img
+                  class="image"
+                  src="./images/portfolio-gallery/img-5-screen-illustrations.jpg"
+                  alt="Screen of phone"
+                  width="360"
+                />
+                <div class="desc">
+                  <h2 class="subtitle">Screen Illustrations</h2>
+                  <p class="text">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="item card">
+              <a class="link" href="">
+                <img
+                  class="image"
+                  src="./images/portfolio-gallery/img-6-online-courses.jpg"
+                  alt="Young girl"
+                  width="360"
+                />
+                <div class="desc">
+                  <h2 class="subtitle">Online Courses</h2>
+                  <p class="text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="item card">
+              <a class="link" href="">
+                <img
+                  class="image"
+                  src="./images/portfolio-gallery/img-7-instagram-stories.jpg"
+                  alt="Advertisement of smart technology"
+                  width="360"
+                />
+                <div class="desc">
+                  <h2 class="subtitle">Instagram Stories Concept</h2>
+                  <p class="text">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="item card">
+              <a class="link" href="">
+                <img
+                  class="image"
+                  src="./images/portfolio-gallery/img-8-organic-food.jpg"
+                  alt="Bag of vegetables"
+                  width="360"
+                />
+                <div class="desc">
+                  <h2 class="subtitle">Organic Food</h2>
+                  <p class="text">Web Site</p>
+                </div>
+              </a>
+            </li>
+            <li class="item card">
+              <a class="link" href="">
+                <img
+                  class="image"
+                  src="./images/portfolio-gallery/img-9-fresh-coffee.jpg"
+                  alt="Fresh coffee"
+                  width="360"
+                />
+                <div class="desc">
+                  <h2 class="subtitle">Fresh Coffee</h2>
+                  <p class="text">Web Site</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="link logo" href="./index.html"
-        >Web<span class="logo-studio">Studio</span>
-      </a>
-      <p class="text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <div class="adv">
+          <a class="link logo" href="./index.html"
+            >Web<span class="logo-studio">Studio</span>
+          </a>
+          <p class="text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
